// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VintageYearFilter renders a VintageYearFilter and edit the min year and max year 1`] = `
<div>
  <button
    aria-controls="popover-content-:rb:"
    aria-expanded="true"
    aria-haspopup="dialog"
    class="chakra-button css-4xx2wk"
    id="popover-trigger-:rb:"
    type="button"
  >
    <div
      class="css-jmqhys"
    >
      label
      <div
        class="css-17xejub"
      />
      <svg
        class="chakra-icon css-c0air1"
        focusable="false"
        viewBox="0 0 8 4"
      >
        <path
          d="M3.99911 3.9034L0.191406 0.0957031H7.80681L3.99911 3.9034Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </button>
  <div
    class="chakra-popover__popper css-0"
    data-popper-escaped=""
    data-popper-placement="bottom"
    data-popper-reference-hidden=""
    style="visibility: visible; inset: 0 auto auto 0; --popper-transform-origin: top center; position: absolute; left: 0px; top: 0px; margin: 0px; transform: translate(0px, 0px); width: 0px;"
  >
    <section
      aria-describedby="popover-body-:rb:"
      class="chakra-popover__content css-1j9y0nx"
      id="popover-content-:rb:"
      role="dialog"
      style="transform-origin: var(--popper-transform-origin); opacity: 0.9758993984141853; visibility: visible; transform: scale(0.9987949699207093) translateZ(0);"
      tabindex="-1"
    >
      <div
        class="chakra-popover__body css-8atqhb"
        id="popover-body-:rb:"
      >
        <div
          class="chakra-stack css-tl3ftk"
        >
          <div
            class="chakra-stack css-h0nw9k"
          >
            <div
              class="chakra-stack css-m3jj3s"
            >
              <p
                class="chakra-text css-0"
              >
                Minimum Date
              </p>
              <div
                class="chakra-input__group css-1yb751z"
                data-group="true"
              >
                <input
                  class="chakra-input css-p5mn3g"
                  placeholder="yyyy"
                  value="2023"
                />
              </div>
            </div>
            <svg
              class="chakra-icon css-n059si"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M5.99997 12.75C5.78747 12.75 5.60936 12.678 5.46563 12.5342C5.32188 12.3904 5.25 12.2122 5.25 11.9997C5.25 11.7871 5.32188 11.609 5.46563 11.4654C5.60936 11.3218 5.78747 11.25 5.99997 11.25H18C18.2125 11.25 18.3906 11.3219 18.5344 11.4657C18.6781 11.6095 18.75 11.7877 18.75 12.0003C18.75 12.2129 18.6781 12.391 18.5344 12.5346C18.3906 12.6782 18.2125 12.75 18 12.75H5.99997Z"
                fill="currentColor"
              />
            </svg>
            <div
              class="chakra-stack css-m3jj3s"
            >
              <p
                class="chakra-text css-0"
              >
                Maximum Date
              </p>
              <div
                class="chakra-input__group css-1yb751z"
                data-group="true"
              >
                <input
                  class="chakra-input css-p5mn3g"
                  placeholder="yyyy"
                  value="2023"
                />
              </div>
            </div>
          </div>
          <div
            class="chakra-stack css-1fqndue"
          >
            <button
              class="chakra-button css-4xx2wk"
              data-testid="vintage-year-filter-clear"
              type="button"
            >
              Clear
            </button>
            <button
              class="chakra-button css-4xx2wk"
              data-testid="vintage-year-filter-apply"
              type="button"
            >
              Apply
            </button>
          </div>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`VintageYearFilter renders a VintageYearFilter and open it 1`] = `
<div>
  <button
    aria-controls="popover-content-:r1:"
    aria-expanded="true"
    aria-haspopup="dialog"
    class="chakra-button css-4xx2wk"
    id="popover-trigger-:r1:"
    type="button"
  >
    <div
      class="css-jmqhys"
    >
      label
      <div
        class="css-17xejub"
      />
      <svg
        class="chakra-icon css-c0air1"
        focusable="false"
        viewBox="0 0 8 4"
      >
        <path
          d="M3.99911 3.9034L0.191406 0.0957031H7.80681L3.99911 3.9034Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </button>
  <div
    class="chakra-popover__popper css-0"
    data-popper-escaped=""
    data-popper-placement="bottom"
    data-popper-reference-hidden=""
    style="visibility: visible; inset: 0 auto auto 0; --popper-transform-origin: top center; position: absolute; left: 0px; top: 0px; margin: 0px; transform: translate(0px, 0px); width: 0px;"
  >
    <section
      aria-describedby="popover-body-:r1:"
      class="chakra-popover__content css-1j9y0nx"
      id="popover-content-:r1:"
      role="dialog"
      style="transform-origin: var(--popper-transform-origin); opacity: 0.3627904654422309; visibility: visible; transform: scale(0.9681395232721115) translateZ(0);"
      tabindex="-1"
    >
      <div
        class="chakra-popover__body css-8atqhb"
        id="popover-body-:r1:"
      >
        <div
          class="chakra-stack css-tl3ftk"
        >
          <div
            class="chakra-stack css-h0nw9k"
          >
            <div
              class="chakra-stack css-m3jj3s"
            >
              <p
                class="chakra-text css-0"
              >
                Minimum Date
              </p>
              <div
                class="chakra-input__group css-1yb751z"
                data-group="true"
              >
                <input
                  class="chakra-input css-p5mn3g"
                  placeholder="yyyy"
                  value=""
                />
              </div>
            </div>
            <svg
              class="chakra-icon css-n059si"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M5.99997 12.75C5.78747 12.75 5.60936 12.678 5.46563 12.5342C5.32188 12.3904 5.25 12.2122 5.25 11.9997C5.25 11.7871 5.32188 11.609 5.46563 11.4654C5.60936 11.3218 5.78747 11.25 5.99997 11.25H18C18.2125 11.25 18.3906 11.3219 18.5344 11.4657C18.6781 11.6095 18.75 11.7877 18.75 12.0003C18.75 12.2129 18.6781 12.391 18.5344 12.5346C18.3906 12.6782 18.2125 12.75 18 12.75H5.99997Z"
                fill="currentColor"
              />
            </svg>
            <div
              class="chakra-stack css-m3jj3s"
            >
              <p
                class="chakra-text css-0"
              >
                Maximum Date
              </p>
              <div
                class="chakra-input__group css-1yb751z"
                data-group="true"
              >
                <input
                  class="chakra-input css-p5mn3g"
                  placeholder="yyyy"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="chakra-stack css-1fqndue"
          >
            <button
              class="chakra-button css-4xx2wk"
              data-testid="vintage-year-filter-clear"
              type="button"
            >
              Clear
            </button>
            <button
              class="chakra-button css-4xx2wk"
              data-testid="vintage-year-filter-apply"
              type="button"
            >
              Apply
            </button>
          </div>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`VintageYearFilter renders a VintageYearFilter with a pre-selected max year and click on apply 1`] = `
<div>
  <button
    aria-controls="popover-content-:r3:"
    aria-expanded="true"
    aria-haspopup="dialog"
    class="chakra-button css-4xx2wk"
    id="popover-trigger-:r3:"
    type="button"
  >
    <div
      class="css-jmqhys"
    >
      Up to 2023
      <div
        class="css-17xejub"
      />
      <svg
        class="chakra-icon css-c0air1"
        focusable="false"
        viewBox="0 0 8 4"
      >
        <path
          d="M3.99911 3.9034L0.191406 0.0957031H7.80681L3.99911 3.9034Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </button>
  <div
    class="chakra-popover__popper css-0"
    data-popper-escaped=""
    data-popper-placement="bottom"
    data-popper-reference-hidden=""
    style="visibility: visible; inset: 0 auto auto 0; --popper-transform-origin: top center; position: absolute; left: 0px; top: 0px; margin: 0px; transform: translate(0px, 0px); width: 0px;"
  >
    <section
      aria-describedby="popover-body-:r3:"
      class="chakra-popover__content css-1j9y0nx"
      id="popover-content-:r3:"
      role="dialog"
      style="transform-origin: var(--popper-transform-origin); opacity: 0.3340281235578004; visibility: visible; transform: scale(0.96670140617789) translateZ(0);"
      tabindex="-1"
    >
      <div
        class="chakra-popover__body css-8atqhb"
        id="popover-body-:r3:"
      >
        <div
          class="chakra-stack css-tl3ftk"
        >
          <div
            class="chakra-stack css-h0nw9k"
          >
            <div
              class="chakra-stack css-m3jj3s"
            >
              <p
                class="chakra-text css-0"
              >
                Minimum Date
              </p>
              <div
                class="chakra-input__group css-1yb751z"
                data-group="true"
              >
                <input
                  class="chakra-input css-p5mn3g"
                  placeholder="yyyy"
                  value=""
                />
              </div>
            </div>
            <svg
              class="chakra-icon css-n059si"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M5.99997 12.75C5.78747 12.75 5.60936 12.678 5.46563 12.5342C5.32188 12.3904 5.25 12.2122 5.25 11.9997C5.25 11.7871 5.32188 11.609 5.46563 11.4654C5.60936 11.3218 5.78747 11.25 5.99997 11.25H18C18.2125 11.25 18.3906 11.3219 18.5344 11.4657C18.6781 11.6095 18.75 11.7877 18.75 12.0003C18.75 12.2129 18.6781 12.391 18.5344 12.5346C18.3906 12.6782 18.2125 12.75 18 12.75H5.99997Z"
                fill="currentColor"
              />
            </svg>
            <div
              class="chakra-stack css-m3jj3s"
            >
              <p
                class="chakra-text css-0"
              >
                Maximum Date
              </p>
              <div
                class="chakra-input__group css-1yb751z"
                data-group="true"
              >
                <input
                  class="chakra-input css-p5mn3g"
                  placeholder="yyyy"
                  value="2023"
                />
              </div>
            </div>
          </div>
          <div
            class="chakra-stack css-1fqndue"
          >
            <button
              class="chakra-button css-4xx2wk"
              data-testid="vintage-year-filter-clear"
              type="button"
            >
              Clear
            </button>
            <button
              class="chakra-button css-4xx2wk"
              data-testid="vintage-year-filter-apply"
              type="button"
            >
              Apply
            </button>
          </div>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`VintageYearFilter renders a VintageYearFilter with a pre-selected min year and click on apply 1`] = `
<div>
  <button
    aria-controls="popover-content-:r5:"
    aria-expanded="true"
    aria-haspopup="dialog"
    class="chakra-button css-4xx2wk"
    id="popover-trigger-:r5:"
    type="button"
  >
    <div
      class="css-jmqhys"
    >
      2023 and later
      <div
        class="css-17xejub"
      />
      <svg
        class="chakra-icon css-c0air1"
        focusable="false"
        viewBox="0 0 8 4"
      >
        <path
          d="M3.99911 3.9034L0.191406 0.0957031H7.80681L3.99911 3.9034Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </button>
  <div
    class="chakra-popover__popper css-0"
    data-popper-escaped=""
    data-popper-placement="bottom"
    data-popper-reference-hidden=""
    style="visibility: visible; inset: 0 auto auto 0; --popper-transform-origin: top center; position: absolute; left: 0px; top: 0px; margin: 0px; transform: translate(0px, 0px); width: 0px;"
  >
    <section
      aria-describedby="popover-body-:r5:"
      class="chakra-popover__content css-1j9y0nx"
      id="popover-content-:r5:"
      role="dialog"
      style="transform-origin: var(--popper-transform-origin); opacity: 0.303765981370816; visibility: visible; transform: scale(0.9659405844882712) translateZ(0);"
      tabindex="-1"
    >
      <div
        class="chakra-popover__body css-8atqhb"
        id="popover-body-:r5:"
      >
        <div
          class="chakra-stack css-tl3ftk"
        >
          <div
            class="chakra-stack css-h0nw9k"
          >
            <div
              class="chakra-stack css-m3jj3s"
            >
              <p
                class="chakra-text css-0"
              >
                Minimum Date
              </p>
              <div
                class="chakra-input__group css-1yb751z"
                data-group="true"
              >
                <input
                  class="chakra-input css-p5mn3g"
                  placeholder="yyyy"
                  value="2023"
                />
              </div>
            </div>
            <svg
              class="chakra-icon css-n059si"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M5.99997 12.75C5.78747 12.75 5.60936 12.678 5.46563 12.5342C5.32188 12.3904 5.25 12.2122 5.25 11.9997C5.25 11.7871 5.32188 11.609 5.46563 11.4654C5.60936 11.3218 5.78747 11.25 5.99997 11.25H18C18.2125 11.25 18.3906 11.3219 18.5344 11.4657C18.6781 11.6095 18.75 11.7877 18.75 12.0003C18.75 12.2129 18.6781 12.391 18.5344 12.5346C18.3906 12.6782 18.2125 12.75 18 12.75H5.99997Z"
                fill="currentColor"
              />
            </svg>
            <div
              class="chakra-stack css-m3jj3s"
            >
              <p
                class="chakra-text css-0"
              >
                Maximum Date
              </p>
              <div
                class="chakra-input__group css-1yb751z"
                data-group="true"
              >
                <input
                  class="chakra-input css-p5mn3g"
                  placeholder="yyyy"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="chakra-stack css-1fqndue"
          >
            <button
              class="chakra-button css-4xx2wk"
              data-testid="vintage-year-filter-clear"
              type="button"
            >
              Clear
            </button>
            <button
              class="chakra-button css-4xx2wk"
              data-testid="vintage-year-filter-apply"
              type="button"
            >
              Apply
            </button>
          </div>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`VintageYearFilter renders a VintageYearFilter with a pre-selected min year and click on clear 1`] = `
<div>
  <button
    aria-controls="popover-content-:r7:"
    aria-expanded="true"
    aria-haspopup="dialog"
    class="chakra-button css-4xx2wk"
    id="popover-trigger-:r7:"
    type="button"
  >
    <div
      class="css-jmqhys"
    >
      2023 and later
      <div
        class="css-17xejub"
      />
      <svg
        class="chakra-icon css-c0air1"
        focusable="false"
        viewBox="0 0 8 4"
      >
        <path
          d="M3.99911 3.9034L0.191406 0.0957031H7.80681L3.99911 3.9034Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </button>
  <div
    class="chakra-popover__popper css-0"
    data-popper-escaped=""
    data-popper-placement="bottom"
    data-popper-reference-hidden=""
    style="visibility: visible; inset: 0 auto auto 0; --popper-transform-origin: top center; position: absolute; left: 0px; top: 0px; margin: 0px; transform: translate(0px, 0px); width: 0px;"
  >
    <section
      aria-describedby="popover-body-:r7:"
      class="chakra-popover__content css-1j9y0nx"
      id="popover-content-:r7:"
      role="dialog"
      style="transform-origin: var(--popper-transform-origin); opacity: 0.6008218588249292; visibility: visible; transform: scale(0.9800410929412464) translateZ(0);"
      tabindex="-1"
    >
      <div
        class="chakra-popover__body css-8atqhb"
        id="popover-body-:r7:"
      >
        <div
          class="chakra-stack css-tl3ftk"
        >
          <div
            class="chakra-stack css-h0nw9k"
          >
            <div
              class="chakra-stack css-m3jj3s"
            >
              <p
                class="chakra-text css-0"
              >
                Minimum Date
              </p>
              <div
                class="chakra-input__group css-1yb751z"
                data-group="true"
              >
                <input
                  class="chakra-input css-p5mn3g"
                  placeholder="yyyy"
                  value=""
                />
              </div>
            </div>
            <svg
              class="chakra-icon css-n059si"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M5.99997 12.75C5.78747 12.75 5.60936 12.678 5.46563 12.5342C5.32188 12.3904 5.25 12.2122 5.25 11.9997C5.25 11.7871 5.32188 11.609 5.46563 11.4654C5.60936 11.3218 5.78747 11.25 5.99997 11.25H18C18.2125 11.25 18.3906 11.3219 18.5344 11.4657C18.6781 11.6095 18.75 11.7877 18.75 12.0003C18.75 12.2129 18.6781 12.391 18.5344 12.5346C18.3906 12.6782 18.2125 12.75 18 12.75H5.99997Z"
                fill="currentColor"
              />
            </svg>
            <div
              class="chakra-stack css-m3jj3s"
            >
              <p
                class="chakra-text css-0"
              >
                Maximum Date
              </p>
              <div
                class="chakra-input__group css-1yb751z"
                data-group="true"
              >
                <input
                  class="chakra-input css-p5mn3g"
                  placeholder="yyyy"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="chakra-stack css-1fqndue"
          >
            <button
              class="chakra-button css-4xx2wk"
              data-testid="vintage-year-filter-clear"
              type="button"
            >
              Clear
            </button>
            <button
              class="chakra-button css-4xx2wk"
              data-testid="vintage-year-filter-apply"
              type="button"
            >
              Apply
            </button>
          </div>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`VintageYearFilter renders a VintageYearFilter with a pre-selected min year and max year and click on apply 1`] = `
<div>
  <button
    aria-controls="popover-content-:r9:"
    aria-expanded="true"
    aria-haspopup="dialog"
    class="chakra-button css-4xx2wk"
    id="popover-trigger-:r9:"
    type="button"
  >
    <div
      class="css-jmqhys"
    >
      2023 - 2023
      <div
        class="css-17xejub"
      />
      <svg
        class="chakra-icon css-c0air1"
        focusable="false"
        viewBox="0 0 8 4"
      >
        <path
          d="M3.99911 3.9034L0.191406 0.0957031H7.80681L3.99911 3.9034Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </button>
  <div
    class="chakra-popover__popper css-0"
    data-popper-escaped=""
    data-popper-placement="bottom"
    data-popper-reference-hidden=""
    style="visibility: visible; inset: 0 auto auto 0; --popper-transform-origin: top center; position: absolute; left: 0px; top: 0px; margin: 0px; transform: translate(0px, 0px); width: 0px;"
  >
    <section
      aria-describedby="popover-body-:r9:"
      class="chakra-popover__content css-1j9y0nx"
      id="popover-content-:r9:"
      role="dialog"
      style="transform-origin: var(--popper-transform-origin); opacity: 0.28823506491607986; visibility: visible; transform: scale(0.964411753245804) translateZ(0);"
      tabindex="-1"
    >
      <div
        class="chakra-popover__body css-8atqhb"
        id="popover-body-:r9:"
      >
        <div
          class="chakra-stack css-tl3ftk"
        >
          <div
            class="chakra-stack css-h0nw9k"
          >
            <div
              class="chakra-stack css-m3jj3s"
            >
              <p
                class="chakra-text css-0"
              >
                Minimum Date
              </p>
              <div
                class="chakra-input__group css-1yb751z"
                data-group="true"
              >
                <input
                  class="chakra-input css-p5mn3g"
                  placeholder="yyyy"
                  value="2023"
                />
              </div>
            </div>
            <svg
              class="chakra-icon css-n059si"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M5.99997 12.75C5.78747 12.75 5.60936 12.678 5.46563 12.5342C5.32188 12.3904 5.25 12.2122 5.25 11.9997C5.25 11.7871 5.32188 11.609 5.46563 11.4654C5.60936 11.3218 5.78747 11.25 5.99997 11.25H18C18.2125 11.25 18.3906 11.3219 18.5344 11.4657C18.6781 11.6095 18.75 11.7877 18.75 12.0003C18.75 12.2129 18.6781 12.391 18.5344 12.5346C18.3906 12.6782 18.2125 12.75 18 12.75H5.99997Z"
                fill="currentColor"
              />
            </svg>
            <div
              class="chakra-stack css-m3jj3s"
            >
              <p
                class="chakra-text css-0"
              >
                Maximum Date
              </p>
              <div
                class="chakra-input__group css-1yb751z"
                data-group="true"
              >
                <input
                  class="chakra-input css-p5mn3g"
                  placeholder="yyyy"
                  value="2023"
                />
              </div>
            </div>
          </div>
          <div
            class="chakra-stack css-1fqndue"
          >
            <button
              class="chakra-button css-4xx2wk"
              data-testid="vintage-year-filter-clear"
              type="button"
            >
              Clear
            </button>
            <button
              class="chakra-button css-4xx2wk"
              data-testid="vintage-year-filter-apply"
              type="button"
            >
              Apply
            </button>
          </div>
        </div>
      </div>
    </section>
  </div>
</div>
`;
